Ongoing development of GAMESS/PT2R12 interface: can read orbitals (sometimes) and 1-RDM.

--- a/src/bin/pt2r12/pt2r12.in
+++ b/src/bin/pt2r12/pt2r12.in
@@ -22,3 +22,45 @@ mpqc: (
     )
   )
 )
+
+basis:(
+% BASIS SET: (3s) -> [2s]
+ hydrogen: "mod3-21G": [
+  (type: [am = s]
+   {exp coef:0} = {
+            5.447178000      0.15628500
+            0.824547000      0.90469100
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+            0.183192000      1.00000000
+   })
+ ]
+% BASIS SET: (6s,3p) -> [3s,2p]
+ oxygen: "mod3-21G": [
+  (type: [am = s]
+   {exp coef:0} = {
+          322.037000000      0.05923940
+           48.430800000      0.35150000
+           10.420600000      0.70765800
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+            7.402940000     -0.40445300
+            1.576200000      1.22156000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            7.402940000     0.24458600
+            1.576200000     0.85395500
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+            0.373684000      1.00000000
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+            0.373684000      1.00000000
+   })
+ ]
+)
