--- a/src/bin/pt2r12/Makefile
+++ b/src/bin/pt2r12/Makefile
@@ -14,7 +14,7 @@ INCLUDE += -I. -I$(SRCDIR) -I$(SRCTOPDIR)/src/bin/mpqc
 CXXINCLUDE += -I. -I$(SRCDIR)
 
 TARGET_TO_MAKE = pt2r12
-CXXSRC = pt2r12.cc pt2r12_gamess.cc
+CXXSRC = pt2r12.cc pt2r12_gamess.cc moinfo.cc
 INC =
 DEPENDINCLUDE = $(INC)
 
