--- a/src/bin/mpqc/validate/ref/ccsdpt_ptr12_h2o.in
+++ b/src/bin/mpqc/validate/ref/ccsdpt_ptr12_h2o.in
@@ -48,7 +48,7 @@ mole<CCSD>: (
   workmemory = 100000000
   store_ints = posix
   nfzc = auto
-  ansatz<R12Ansatz> : ( diag = true )
+  ansatz<R12Ansatz> : ( diag = false )
   reference<CLHF>: (
     integrals = $:integral
     molecule = $:molecule
