--- a/src/bin/mpqc/validate/ref/ccsdpt_ptr12_diag_ne.in
+++ b/src/bin/mpqc/validate/ref/ccsdpt_ptr12_diag_ne.in
@@ -39,7 +39,7 @@ mole<CCSD>: (
   workmemory = 100000000
   store_ints = posix
   nfzc = auto
-  ansatz<R12Ansatz> : ( diag = false )
+  ansatz<R12Ansatz> : ( diag = true )
   reference<CLHF>: (
     integrals = $:integral
     molecule = $:molecule
