Builds libmpqc and libmpqcinit by default so that pt2r12 executables can be generated without having to install_devel.

--- a/src/bin/mpqc/Makefile
+++ b/src/bin/mpqc/Makefile
@@ -55,9 +55,11 @@ default:: $(DEPENDINCLUDE)
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalRules
 
-mpqc: $(BINOBJ) $(LIBS)
+mpqc:: $(BINOBJ) $(LIBS)
 	echo "$(LISTLIBS) $(INCLUDE) $(DEFINES) $(XDEF) $(SRCDIR)/LIBS.h"
 	$(LTLINK) $(LD) $(LDFLAGS) -o $@ $^ $(XLIBS) $(SYSLIBS) $(LTLINKBINOPTS)
+
+default:: $(TOPDIR)/lib/libmpqc.$(LIBSUF) $(TOPDIR)/lib/libmpqcinit.$(LIBSUF)
 
 $(TOPDIR)/lib/libmpqc.a: $(BINOBJ)
 	/bin/rm -f $@
