1) Added command-line options to pt2r12 executable to specify CABS, DFBS, and geminal exponent. Improved option descriptions. 2) Introduced ExternPT2R12 that wraps much of initialization. This allows to avoid creating a dummy Wavefunction just so that WavefunctionWorld can be created. 3) CABS can now be created automatically (but likely not optimally).

--- a/src/bin/pt2r12/Makefile
+++ b/src/bin/pt2r12/Makefile
@@ -13,7 +13,7 @@ include $(TOPDIR)/lib/Makedirlist
 INCLUDE += -I. -I$(SRCDIR) -I$(SRCTOPDIR)/src/bin/mpqc
 CXXINCLUDE += -I. -I$(SRCDIR)
 
-CXXSRC = pt2r12.cc moinfo.cc
+CXXSRC = pt2r12.cc moinfo.cc extern_pt2r12.cc
 
 TARGET_TO_MAKE = pt2r12
 default:: $(TARGET_TO_MAKE)
