1) Removed cyclic dependency between wfn and dft libraries by moving solvent.h/cc from wfn to dft. 2) Minor improvements.
--HG--
rename : src/lib/chemistry/qc/wfn/solvent.cc => src/lib/chemistry/qc/dft/solvent.cc
rename : src/lib/chemistry/qc/wfn/solvent.h => src/lib/chemistry/qc/dft/solvent.h

--- a/src/lib/chemistry/qc/dft/Makefile
+++ b/src/lib/chemistry/qc/dft/Makefile
@@ -38,7 +38,11 @@ TESTPROGS = dfttest lebedev
 
 SRCS = functional.cc integrator.cc \
        clks.cc uks.cc hsosks.cc lebedev.c \
-       tmplinst.cc am05.cc
+       tmplinst.cc am05.cc solvent.cc
+
+INC = functional.h integrator.h \
+      clks.h uks.h hsosks.h lebedev.h \
+      am05.h solvent.h
 
 LIBOBJ= $(SRCS:%.cc=%.$(OBJSUF))
 LIBOBJ:= $(LIBOBJ:%.c=%.$(OBJSUF))
