IN PROGRESS - issue MPQC-42: implemented Jacobi and CG linear solvers http://valeev.chem.vt.edu:8080/browse/MPQC-42

--- a/src/lib/math/scmat/f77sym.in
+++ b/src/lib/math/scmat/f77sym.in
@@ -7,6 +7,7 @@
 #define F77_DGEMV
 #define F77_DAXPY
 #define F77_DDOT
+#define F77_DSPMV
 #define F77_DGESVD
 #define F77_DSPSVX
 #define F77_DSYEVD
