To run ccr12 tests in parallel need to use store_ints=mem.

--- a/src/bin/mpqc/validate/ref/ccsdpt_ptr12_ne.in
+++ b/src/bin/mpqc/validate/ref/ccsdpt_ptr12_ne.in
@@ -37,7 +37,7 @@ mole<CCSD>: (
   abs_method = cabs+
   memory     = 200000000
   workmemory = 100000000
-  store_ints = posix
+  store_ints = mem
   nfzc = auto
   ansatz<R12Ansatz> : ( diag = false )
   reference<CLHF>: (
