--- a/src/bin/mpqc/validate/ref/ccsdptpr12_ne.in
+++ b/src/bin/mpqc/validate/ref/ccsdptpr12_ne.in
@@ -37,7 +37,7 @@ mole<CCSDPR12>: (
   abs_method = cabs+
   memory     = 200000000
   workmemory = 100000000
-  store_ints = posix
+  store_ints = mem
   nfzc = auto
   ansatz<R12Ansatz> : ( diag = true )
   reference<CLHF>: (
