update of CCSD_F12 1rdm: orbital relaxation effect added (libqt was added to configure.in in order to use pople function)

--- a/configure.in
+++ b/configure.in
@@ -2115,6 +2115,8 @@ if test X$HAVE_COMPATIBLE_PSI = Xyes -a X$HAVE_LIBPSIO = Xyes -a X$HAVE_LIBCHKPT
   AC_CHECK_LIB(PSI_dpd,dpd_init,[HAVE_LIBDPD=yes;PSILIBS="-lPSI_dpd $PSILIBS"],HAVE_LIBDPD=no)
   dnl - libiwl's iwl_buf_close requires libpsio
   AC_CHECK_LIB(PSI_iwl,iwl_buf_close,[HAVE_LIBIWL=yes;PSILIBS="-lPSI_iwl $PSILIBS"],HAVE_LIBIWL=no)  
+  dnl - libqt's pople requires libqt
+  AC_CHECK_LIB(PSI_qt,pople,[HAVE_LIBQT=yes;PSILIBS="-lPSI_qt $PSILIBS"],HAVE_LIBQT=no)
   AC_LANG_RESTORE
   
   if test X$HAVE_LIBCIOMR = Xyes -a X$HAVE_LIBDPD = Xyes -a X$HAVE_LIBIWL = Xyes; then
