--- a/src/lib/chemistry/qc/wfn/Makefile
+++ b/src/lib/chemistry/qc/wfn/Makefile
@@ -39,12 +39,13 @@ TESTPROGS = wfntest
 
 SRCS = wfn.cc densval.cc natorbval.cc obwfn.cc density.cc hcorewfn.cc \
        accum.cc nao.cc orbital.cc eht.cc esp.cc femo.cc \
-       orbitalspace.cc orbitalspace_utils.cc rdm.cc spin.cc
+       orbitalspace.cc orbitalspace_utils.cc rdm.cc spin.cc \
+       soad.cc
 
 INC = wfn.h accum.h density.h eht.h esp.h femo.h obwfn.h orbital.h \
       orbitalspace.h orbitalspace.timpl.h \
       orbitalspace_utils.h orbitalspace_utils.timpl.h rdm.h \
-      spin.h
+      spin.h soad.h
 
 LIBOBJ= $(SRCS:%.cc=%.$(OBJSUF))
 
@@ -56,7 +57,7 @@ LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
 
 WFNTESTLIBS: = $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/../dft/LIBS.h)
 
-wfntest:: wfntest.$(OBJSUF) $(WFNTESTLIBS)
+wfntest:: wfntest.$(OBJSUF) $(WFNTESTLIBS) $(LIBS)
 	$(LTLINK) $(CXX) $(LDFLAGS) -o wfntest $^ $(SYSLIBS) $(LTLINKBINOPTS)
 
 wfntest.$(OBJSUF): wfntest.cc
