ckpt_*efcopt series was overly sensitive to the guess, updated the reference outputs using current default guess (SOAD) and increased target optimization accuracy (probably will not much good).

--- a/src/bin/mpqc/validate/ref/ckpt_efcopt.in
+++ b/src/bin/mpqc/validate/ref/ckpt_efcopt.in
@@ -45,6 +45,7 @@ mpqc: (
   )
   % optimizer object for the molecular geometry
   opt<EFCOpt>: (
+    accuracy = 1e-6
     max_iterations = 3
     function = $..:mole
     transition_state = yes
